ignore chroma folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,dotenv,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,dotenv,python
 
+### VectorDB ###
+chroma
+
 ### dotenv ###
 .env
 
@@ -26,7 +29,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
